DPK/QCDW32/QCWRT.H

HGOBJ WINAPI _export WRSetBargraph (PGRAPH_DEF pGrDesc, HDATA hData,
	realtype rCenterPoint, int nDir, 
    realtype rFirst, realtype rLast, realtype rWidth,
    COLORREF FAR *lpBarColor, LPINT lpHatchStyle, LPINT lpBorderColor);
HGOBJ WINAPI _export WRSetAutoBargraph (PGRAPH_DEF pGrDesc,
    HDATA hData, realtype rMin, realtype rMax, realtype rCenterPoint,
    int nDir, int nPrec, realtype rSetp, realtype rHighAlm,
    realtype rLowAlm, LPSTR lpHighAlmMes, LPSTR lpLowAlmMes,
	COLORREF FAR *lpBarColor, PHGOBJ lphAutoBar);
HGOBJ WINAPI _export WRSetAutoBargraph2 (PGRAPH_DEF pGrDesc,
    HDATA hData, realtype rMin, realtype rMax, realtype rCenterPoint,
    int nDir, int nPrec, int nFontSize, realtype rSetp, realtype rHighAlm,
    realtype rLowAlm, LPSTR lpHighAlmMes, LPSTR lpLowAlmMes,
	COLORREF FAR *lpBarColor, PHGOBJ lphAutoBar);
HGOBJ WINAPI _export WRSetAutoScrollGraph (PGRAPH_DEF pGrDesc,
    HDATA hData, realtype rSampleInt, realtype rRelResetInt, 
    realtype rMinVal, realtype rMaxVal, realtype rXRange, 
    int nType, int nPrec, realtype rSetp, realtype rHighAlm,
    realtype rLowAlm, LPSTR    lpXTitle, int nPlotColor, 
    LPINT lpLineColor, BOOL bText,PHGOBJ lphAutoScroll);
HGOBJ WINAPI _export WRSetAutoScrollGraph2 (PGRAPH_DEF pGrDesc,
    HDATA hData, realtype rSampleInt, realtype rRelResetInt, 
    realtype rMinVal, realtype rMaxVal, realtype rXRange, 
    int nType, int nPrec, int nFontSize, realtype rSetp, realtype rHighAlm,
    realtype rLowAlm, LPSTR    lpXTitle, int nPlotColor, 
    LPINT lpLineColor, BOOL bText,PHGOBJ lphAutoScroll);
HGOBJ WINAPI _export WRSetPIDBargraph (PGRAPH_DEF pGrDesc,
    HCONT hPID, realtype rCenterPointMeas,
	realtype rCenterPointOut, int nPrecMeas, int nPrecOut,              
    LPSTR lpNorm, LPSTR lpAuto, LPSTR lpMan, 
    COLORREF FAR *lpBarColor, PHGOBJ lphPidBar);
  

HGOBJ WINAPI _export WRSetPIDBargraph2 (PGRAPH_DEF pGrDesc,
    HCONT hPID, realtype rCenterPointMeas,
	realtype rCenterPointOut, int nPrecMeas, int nPrecOut, int nFontSize,
    LPSTR lpNorm, LPSTR lpAuto, LPSTR lpMan, 
    COLORREF FAR *lpBarColor, PHGOBJ lphPidBar);
HGOBJ WINAPI _export WRSetAutoText (PGRAPH_DEF pGrDesc,
    HDATA hData, int nValWidth, int nPrec, LPINT lpColors,
    LPSTR lpDesc, BOOL FAR *lpFlags, PHGOBJ lphAutoText);
HGOBJ WINAPI _export WRSetAutoText2 (PGRAPH_DEF pGrDesc,
    HDATA hData, int nValWidth, int nPrec, int nFontSize, LPINT lpColors,
    LPSTR lpDesc, BOOL FAR *lpFlags, PHGOBJ lphAutoText);
HGOBJ WINAPI _export WRSetAnnun (PGRAPH_DEF pGrDesc,
    HDATA hData, int nValWidth, int nPrec, LPINT lpChanColors,
    COLORREF FAR *lpRgbBackColors, COLORREF rgbBackAlmColor,
    int nNumRows, int nNumColumns, BOOL FAR *lpFlags, int n3D);
 
HGOBJ WINAPI _export WRSetAnnun2 (PGRAPH_DEF pGrDesc,
    HDATA hData, int nValWidth, int nPrec, int nFontSize, LPINT lpChanColors,
    COLORREF FAR *lpRgbBackColors, COLORREF rgbBackAlmColor,
    int nNumRows, int nNumColumns, BOOL FAR *lpFlags, int n3D);
void WINAPI _export WRSetMeterAlarmStartStop(PGRAPH_DEF pGrDesc,
	 HGOBJ  hMeter, realtype  rStart, 
	 realtype  rStop);
           
 
HGOBJ WINAPI _export WRSetMeter (PGRAPH_DEF pGrDesc,
     HDATA hData, int  nChan, realtype  rMin, realtype rMax,    
     realtype  rXCenter, realtype rYCenter,   
     realtype  rDiam, int nStartAngle,
     int     nEndAngle, int nNeedleType, LPINT lpNeedleColor,  
     realtype  rTickRelSize, realtype  rTickSpace, int nSmallTicks, int nTickPos, 
     int nLabelPos, int nLabelPrec, BOOL bText, int nValPrec,
     BOOL bArc, BOOL bUnits, BOOL bAlarms, realtype rAlmRelThick, LPINT lpAlmColor);
HGOBJ WINAPI _export WRSetArcMeter (PGRAPH_DEF pGrDesc,
     HDATA hData, int nChan,      
     realtype  rMin,  realtype rMax, realtype  rCenterPoint,
     realtype  rXCenter, realtype rYCenter, realtype  rDiam, int nStartAngle, 
     int nEndAngle, int nArcColor, int nArcBackColor, realtype rArcRelThick,
     realtype  rTickRelSize, realtype  rTickSpace, int nSmallTicks, int nTickPos, 
     int nLabelPrec, BOOL bText, int nValPrec, BOOL bArc,      
     BOOL bUnits, BOOL bAlarms, realtype  rAlmRelThick, LPINT lpAlmColor);
HGOBJ WINAPI _export WRSetPieMeter (PGRAPH_DEF pGrDesc,
     HDATA hData, int  nChan,      
     realtype  rMin,  realtype rMax, realtype  rCenterPoint,
     realtype  rXCenter, realtype rYCenter, realtype rDiam, int nStartAngle,
     int  nEndAngle, int nPieColor,  int nPieBackColor, 
     realtype  rTickRelSize, realtype rTickSpace, int nSmallTicks, int nTickPos, 
     int  nLabelPrec, BOOL bArc, 
     BOOL bAlarms, realtype rAlmRelThick, LPINT lpAlmColor);
void WINAPI _export WRSetMeterBorder (PGRAPH_DEF pGrDesc,
    HGOBJ hMeter, realtype  rXCenter, realtype  rYCenter,
    realtype rXWidth, realtype rYHeight, 
    COLORREF rgbBackColor, int nBorderType,
    int nBorderColor, int nBorderWidth);
HGOBJ WINAPI _export WRSetScrBarControl (PGRAPH_DEF pGrDesc, 
    FARPROC ScBarControlProc, realtype rX1, realtype rY1, 
    realtype rX2, realtype rY2, COLORREF rgbBkColor,
    realtype rScrollMin, realtype rScrollMax, realtype rSingleStep, 
    realtype rPageStep, realtype rInitPos);
HGOBJ WINAPI _export WRSetButtonControl (PGRAPH_DEF pGrDesc, 
    FARPROC ButControlProc, int nStyle, int nLook,
    realtype rX1, realtype rY1, realtype rX2, realtype rY2, 
    COLORREF rgbBkColor, LPSTR lpText, BOOL bTextLeft);
HGOBJ WINAPI _export WRSetButtonGroup (PGRAPH_DEF pGrDesc, 
    FARPROC ButControlProc, int nLook,    
    realtype rX1, realtype rY1, realtype rX2, realtype rY2, COLORREF rgbBkColor,
    int nNumBut, int nDir, LPSTR lpText, BOOL bTextLeft);
HGOBJ WINAPI _export WRSetLEDControl (PGRAPH_DEF pGrDesc, 
    realtype rX, realtype rY, realtype rDiam, COLORREF rgbBkColor,  
    int nOnColor, int nOffColor);
HGOBJ WINAPI _export WRSetMessage (PGRAPH_DEF pGrDesc, HDATA hData,       
    int     nBinChanNum, realtype  rX, realtype rY,
    int     nBorderColor, int nBorderWidth, int nBackColor,  
    int     nNumMes, LPSTR lpMes, LPINT lpMesColor);
/**************************************************************************/
/* Update */
/**************************************************************************/
BOOL WINAPI _export WRStopObjTimeUpdate (PGRAPH_DEF pGrDesc, HGOBJ hObj);
BOOL WINAPI _export WRStartTimeLabelsUpdate (PGRAPH_DEF pGrDesc,
    HGOBJ hLab, HGOBJ hScrollObj);
BOOL WINAPI _export WRStopTimeLabelsUpdate (PGRAPH_DEF pGrDesc,
    HGOBJ hLab, HGOBJ hScrollObj);
void WINAPI _export WRUpdateTimeLabels (PGRAPH_DEF pGrDesc,
    HGOBJ hLab, realtype rTimeInc);
void WINAPI _export WRResetTimeLabels (PGRAPH_DEF pGrDesc,
    HGOBJ hLab, realtype rNewStart);
void WINAPI _export WRUpdateObj (PGRAPH_DEF pGrDesc, HGOBJ hDynObj);
BOOL WINAPI _export WRShowHist (PGRAPH_DEF pGrDesc, 
    HGOBJ hScroll, realtype rBack, realtype rRange, LPREAL lprActualBack);
/************************************************************************/
/* Alarms                                                               */
/************************************************************************/
BOOL WINAPI _export WRSetAlarm (HDATA hData, int nAlarmType,
    realtype rAlmVal, LPSTR lpAlmMessage);
BOOL WINAPI _export WRSetSetpoint (HDATA hData, realtype rSetp);
void WINAPI _export WREnableAlarmCheck (HDATA hData, BOOL bOn);
void WINAPI _export WRSetAlarmProc (FARPROC AlarmEventProc);
void WINAPI _export WRSetAlarmHyst (HDATA hData, realtype rHyst,
	realtype rDevHyst);
BOOL WINAPI _export WRGetAlarm (HDATA hData, int nAlarmType, 
    LPREAL lprAlmVal, BOOL FAR *lpbOn, LPSTR FAR *lpAlmMessage);
BOOL WINAPI _export WRChangeAlarm (HDATA hData, int nAlarmType,
    realtype rAlmVal, BOOL bOn, LPSTR lpAlmMessage);
/************************************************************************/
/* Control */
/************************************************************************/
void WINAPI _export WRChangePIDSetp (HCONT hPID, realtype rNewSetp);
BOOL WINAPI _export WRGetPIDSetp (HCONT hPID, LPREAL lprSetp);
BOOL WINAPI _export WRGetPIDAutoState (HCONT hPID);
void WINAPI _export WRChangePIDAutoState (HCONT hPID, BOOL bAuto);
BOOL WINAPI _export WRChangePIDOut (HCONT hPID, realtype rOut);
HCONT WINAPI _export WRDefinePID (HDATA hMeasData, HDATA hOutData, 
     LPSTR  lpTitle, realtype rSetp, realtype rProp, 
     realtype rIntg, realtype rDeriv, realtype rSteadyState, realtype rMeasHigh, 
     realtype rMeasLow, realtype rHighRange, realtype rLowRange, realtype rHighLimit, 
     realtype rLowLimit, realtype rRateLim, realtype rSamplePer, 
     realtype rFiltConst, BOOL bIncInc);
BOOL WINAPI _export WRCalcPID (HCONT hPID, realtype rMeas, LPREAL lprOut);
void WINAPI _export WRChangePIDConstants (HCONT hPID, realtype rNewProp,
    realtype rNewIntg, realtype rNewDeriv);
BOOL WINAPI _export WRGetPIDConstants (HCONT hPID, LPREAL lprProp,
    LPREAL lprIntg, LPREAL lprDeriv);
void WINAPI _export WRChangePIDSteadyState (HCONT hPID, realtype rNewSteadyState);
void WINAPI _export WRDeletePID (HCONT hPID, BOOL bFreeData);
BOOL WINAPI _export WREditPIDDlg (HCONT hPID);
BOOL WINAPI _export WRGetScrBar (PGRAPH_DEF pGrDesc, HGOBJ hScBar, 
    LPREAL lprMin, LPREAL lprMax, LPREAL lprSingleStep, LPREAL lprPageStep);
BOOL WINAPI _export WRChangeScrBar (PGRAPH_DEF pGrDesc, HGOBJ hScBar, 
    realtype rScrollMin, realtype rScrollMax, realtype rSingleStep, 
    realtype rPageStep);