DPK/QCDW32/qcwrt.pas


function WRSetBargraph (pGrDesc:PGRAPH_DEF; thdata:HDATA;
	rCenterPoint:Realtype; nDir:INTEGER;
    rFirst, rLast, rWidth:Realtype;
    lpBarColor:LPTCOLORREF; lpHatchStyle, lpBorderColor:LPINT): HGOBJ; stdcall;

function WRSetAutoBargraph (pGrDesc:PGRAPH_DEF;
    thdata:HDATA; rMin, rMax, rCenterPoint:Realtype;
    nDir, nPrec:INTEGER;
    rSetp, rHighAlm, rLowAlm:Realtype;
    lpHighAlmMes, lpLowAlmMes:LPSTR;
    lpBarColor:LPTCOLORREF; lphAutoBar:PHGOBJ): HGOBJ; stdcall;

function WRSetAutoScrollGraph (pGrDesc:PGRAPH_DEF;
    thdata:HDATA;
    rSampleInt, rRelResetInt, rMinVal, rMaxVal, rXRange:Realtype;
    nType, nPrec:INTEGER;
    rSetp, rHighAlm, rLowAlm:Realtype;
    lpXTitle:LPSTR; nPlotColor:INTEGER;
    lpLineColor:LPINT;
    bText:BOOL;
    lphAutoScroll:PHGOBJ): HGOBJ; stdcall;

function WRSetPIDBargraph (pGrDesc:PGRAPH_DEF;
    hPID:HCONT;
    rCenterPointMeas, rCenterPointOut:Realtype;
    nPrecMeas, nPrecOut:INTEGER;
    lpNorm, lpAuto, lpMan:LPSTR;
    lpBarColor:LPTCOLORREF;
    lphPidBar:PHGOBJ): HGOBJ; stdcall;

function WRSetAutoText (pGrDesc:PGRAPH_DEF;
    thdata:HDATA;
    nValWidth, nPrec:INTEGER;
    lpColors:LPINT;
    lpDesc:LPSTR;
    lpFlags:LPBOOL;
    lphAutoText:PHGOBJ): HGOBJ; stdcall;

function WRSetAnnun (pGrDesc:PGRAPH_DEF;
    thdata:HDATA;
    nValWidth, nPrec:INTEGER;
    lpChanColors:LPINT;
    lpRgbBackColors:LPTCOLORREF;
    rgbBackAlmColor:TCOLORREF;
    nNumRows, nNumColumns:INTEGER;
    lpFlags:LPBOOL;
    n3D:INTEGER): HGOBJ; stdcall;

    function WRSetAutoBargraph2 (pGrDesc:PGRAPH_DEF;
    thdata:HDATA; rMin, rMax, rCenterPoint:Realtype;
    nDir, nPrec, fontsize:INTEGER;
    rSetp, rHighAlm, rLowAlm:Realtype;
    lpHighAlmMes, lpLowAlmMes:LPSTR;
    lpBarColor:LPTCOLORREF; lphAutoBar:PHGOBJ): HGOBJ; stdcall;

function WRSetAutoScrollGraph2 (pGrDesc:PGRAPH_DEF;
    thdata:HDATA;
    rSampleInt, rRelResetInt, rMinVal, rMaxVal, rXRange:Realtype;
    nType, nPrec, fontsize:INTEGER;
    rSetp, rHighAlm, rLowAlm:Realtype;
    lpXTitle:LPSTR; nPlotColor:INTEGER;
    lpLineColor:LPINT;
    bText:BOOL;
    lphAutoScroll:PHGOBJ): HGOBJ; stdcall;

function WRSetPIDBargraph2 (pGrDesc:PGRAPH_DEF;
    hPID:HCONT;
    rCenterPointMeas, rCenterPointOut:Realtype;
    nPrecMeas, nPrecOut, fontsize:INTEGER;
    lpNorm, lpAuto, lpMan:LPSTR;
    lpBarColor:LPTCOLORREF;
    lphPidBar:PHGOBJ): HGOBJ; stdcall;

function WRSetAutoText2 (pGrDesc:PGRAPH_DEF;
    thdata:HDATA;
    nValWidth, nPrec, fontsize:INTEGER;
    lpColors:LPINT;
    lpDesc:LPSTR;
    lpFlags:LPBOOL;
    lphAutoText:PHGOBJ): HGOBJ; stdcall;

function WRSetAnnun2 (pGrDesc:PGRAPH_DEF;
    thdata:HDATA;
    nValWidth, nPrec, fontsize:INTEGER;
    lpChanColors:LPINT;
    lpRgbBackColors:LPTCOLORREF;
    rgbBackAlmColor:TCOLORREF;
    nNumRows, nNumColumns:INTEGER;
    lpFlags:LPBOOL;
    n3D:INTEGER): HGOBJ; stdcall;

function WRSetMeter (pGrDesc:PGRAPH_DEF;
     thdata:HDATA; nChan:INTEGER;
     rMin, rMax, rXCenter, rYCenter, rDiam:Realtype;
     nStartAngle, nEndAngle, nNeedleType:INTEGER;
     lpNeedleColor:LPINT;
      rTickRelSize, rTickSpace:Realtype;
      nSmallTicks, nTickPos, nLabelPos, nLabelPrec:INTEGER;
      bText:BOOL; nValPrec:INTEGER;
      bArc, bUnits, bAlarms:BOOL;
      rAlmRelThick:Realtype;
      lpAlmColor:LPINT): HGOBJ; stdcall;
                   
procedure WRSetMeterAlarmStartStop(pGrDesc:PGRAPH_DEF;
	   hMeter:HGOBJ; rStart, rStop:Realtype);  
	                      
function WRSetArcMeter (pGrDesc:PGRAPH_DEF;
     thdata:HDATA; nChan:INTEGER;
     rMin, rMax, rCenterPoint, rXCenter, rYCenter, rDiam:Realtype;
     nStartAngle, nEndAngle, nArcColor, nArcBackColor:INTEGER;
     rArcRelThick, rTickRelSize, rTickSpace:Realtype;
     nSmallTicks, nTickPos, nLabelPrec:INTEGER;
     bText:BOOL; nValPrec:INTEGER;
     bArc, bUnits, bAlarms:BOOL;
     rAlmRelThick:Realtype;
     lpAlmColor:LPINT): HGOBJ; stdcall;

function WRSetPieMeter (pGrDesc:PGRAPH_DEF;
     thdata:HDATA; nChan:INTEGER;
     rMin, rMax, rCenterPoint, rXCenter, rYCenter, rDiam:Realtype;
     nStartAngle, nEndAngle, nPieColor, nPieBackColor:INTEGER;
     rTickRelSize, rTickSpace:Realtype;
     nSmallTicks, nTickPos, nLabelPrec:INTEGER;
     bArc, bAlarms:BOOL;
     rAlmRelThick:Realtype;
     lpAlmColorL:LPINT): HGOBJ; stdcall;

procedure WRSetMeterBorder (pGrDesc:PGRAPH_DEF;
    hMeter:HGOBJ;
    rXCenter, rYCenter, rXWidth, rYHeight:Realtype;
    rgbBackColor:TCOLORREF;
    nBorderType, nBorderColor, nLineWidth:INTEGER); stdcall;

function WRSetScrBarControl (pGrDesc:PGRAPH_DEF;
    ScBarControlProc:TFARPROC; { FARPROC }
    rX1, rY1, rX2, rY2:Realtype;
    rgbBkColor:TCOLORREF;
    rScrollMin, rScrollMax, rSingleStep,
    rPageStep, rInitPos:Realtype): HGOBJ; stdcall;
Function WRChangeScrBar (pGrDesc: PGRAPH_DEF;  hScBar: HGOBJ;
     rScrollMin, rScrollMax, rSingleStep, rPageStep: Realtype): BOOL; stdcall;
Function WRGetScrBar (pGrDesc: PGRAPH_DEF; hScBar: HGOBJ;
    VAR lprMin, lprMax, lprSingleStep, lprPageStep: Realtype): BOOL; stdcall;

function WRSetButtonControl (pGrDesc:PGRAPH_DEF;
    ButControlProc:TFARPROC; { FARPROC }
    nStyle, nLook:INTEGER;
    rX1, rY1, rX2, rY2:Realtype;
    rgbBkColor:TCOLORREF;
    lpText:LPSTR;
    bTextLeft:BOOL): HGOBJ; stdcall;

function WRSetButtonGroup (pGrDesc:PGRAPH_DEF;
    ButControlProc:TFARPROC; { FARPROC }
    nLook:INTEGER;
    rX1, rY1, rX2, rY2:Realtype;
    rgbBkColor:TCOLORREF;
    nNumBut, nDir:INTEGER;
    lpText:LPSTR;
    bTextLeft:BOOL): HGOBJ; stdcall;

function WRSetLEDControl (pGrDesc:PGRAPH_DEF;
    rX, rY, rDiam:Realtype;
    rgbBkColor:TCOLORREF;
    nOnColor, nOffColor:INTEGER): HGOBJ; stdcall;

{************************************************************************}
{ Update }
{************************************************************************}
function WRStopObjTimeUpdate (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ): BOOL; stdcall;
function WRStartTimeLabelsUpdate (pGrDesc:PGRAPH_DEF;
    hLab:HGOBJ; hScroll:HGOBJ): BOOL; stdcall;
function WRStopTimeLabelsUpdate (pGrDesc:PGRAPH_DEF;
    hLab:HGOBJ; hScroll:HGOBJ): BOOL; stdcall;
procedure WRUpdateTimeLabels (pGrDesc:PGRAPH_DEF;
    hLab:HGOBJ; rTimeInc:Realtype); stdcall;
procedure WRResetTimeLabels (pGrDesc:PGRAPH_DEF;
    hLab:HGOBJ; rNewStart:Realtype); stdcall;
procedure WRUpdateObj (pGrDesc:PGRAPH_DEF; hDynObj:HGOBJ); stdcall;
function WRShowHist (pGrDesc:PGRAPH_DEF;
    hScroll:HGOBJ; rBack, rRange:Realtype;
    var lprActualBack:Realtype): BOOL; stdcall;

{**********************************************************************}
{ Alarms                                                               }
{**********************************************************************}
function WRSetAlarm (thdata:HDATA; nAlarmType:INTEGER;
     rAlmVal:Realtype;
     lpAlmMessage:LPSTR): BOOL; stdcall;

function WRSetSetpoint (thdata:HDATA; rSetp:Realtype): BOOL; stdcall;
procedure WREnableAlarmCheck (thdata:HDATA; bOn:BOOL); stdcall;
procedure WRSetAlarmProc (AlarmEventProc:TFARPROC); stdcall;
procedure WRSetAlarmHyst (thdata:HDATA; rHyst, rDevHyst:Realtype); stdcall;
function WRGetAlarm (thdata:HDATA; nAlarmType:INTEGER;
     var lprAlmVal:Realtype;
     lpbOn:LPBOOL;
     var lpAlmMessage:LPSTR): BOOL; stdcall;
function WRChangeAlarm (thdata:HDATA; nAlarmType:INTEGER;
     rAlmVal:Realtype;
     bOn:BOOL;
     lpAlmMessage:LPSTR): BOOL; stdcall;
function WRSetMessage (pGrDesc:PGRAPH_DEF; thdata:HDATA;
    nBinChanNum:INTEGER;
    rX, rY:Realtype;
    nBorderColor, nBorderWidth, nBackColor, nNumMes:INTEGER;
    lpMes:LPSTR; lpMesColor:LPINT): HGOBJ; stdcall;

{**********************************************************************}
{ Control }
{**********************************************************************}
procedure WRChangePIDSetp (hPID:HCONT; rNewSetp:Realtype); stdcall;
procedure WRGetPIDSetp (hPID:HCONT; var lprSetp:Realtype);  stdcall;
function WRGetPIDAutoState (hPID:HCONT): BOOL; stdcall;
procedure WRChangePIDAutoState (hPID:HCONT; bAuto:BOOL);  stdcall;
function WRChangePIDOut (hPID:HCONT; rOut:Realtype): BOOL; stdcall;

function WRDefinePID (hMeasData, hOutData:HDATA;
     lpTitle:LPSTR;
     rSetp, rProp, rIntg, rDeriv, rSteadyState, rMeasHigh,
     rMeasLow, rHighRange, rLowRange, rHighLimit,
     rLowLimit, rRateLim, rSamplePer, rFiltConst:Realtype;
     bIncInc:BOOL): HCONT; stdcall;

function WRCalcPID (hPID:HCONT; rMeas:Realtype; var lprOut:Realtype): BOOL; stdcall;

procedure WRChangePIDConstants (hPID:HCONT; rNewProp, rNewIntg, rNewDeriv:Realtype); stdcall;
procedure WRGetPIDConstants (hPID:HCONT; var lprProp, lprIntg, lprDeriv:Realtype); stdcall;
procedure WRChangePIDSteadyState (hPID:HCONT; rNewSteadyState:Realtype); stdcall;
procedure WRDeletePID (hPID:HCONT; bFreeData:BOOL); stdcall;
function WREditPIDDlg (hPID:HCONT): BOOL; stdcall;

{************************************************************************}
{ User interface functions **********************************************}
{************************************************************************}
